# Coretime-Mock

./: .eslintrc.json  .gitignore  .gitmodules  CODEOWNERS  Containerfile  README.md  deps  package-lock.json  package.json
.github/: lint.yml
.github/workflows/: ci.yml  release.yml  test-code.yml
chopstick/: package-lock.json  package.json
chopstick/configs/: coretime-rococo.yml
chopstick/src/: consts.ts  init.ts  types.ts
configs/: regionx.yml
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: coretime.rs  lib.rs  xcm_config.rs
runtime/src/weights/: mod.rs
runtime/src/weights/xcm/: mod.rs
scripts/: full_init.sh  minimal_init.sh  run_zombienet.sh
src/: chopsticks.init.ts  common.ts  consts.ts  types.ts  utils.ts  zombienet.init.ts
src/contracts/: contract.ts  index.init.ts  uniques.ts  utils.ts
src/coretime/: index.init.ts
src/regionx/: index.init.ts
src/relay/: index.init.ts
zombienet/: full_network.toml  minimal_network.toml  network.toml
